Products - added product search bar, also edited some woo styles and fixed z-index overlay issue on mobile

--- a/src/styles/woocommerce/_woocom.scss
+++ b/src/styles/woocommerce/_woocom.scss
@@ -99,3 +99,9 @@
 		}
 	}
 }
+
+.wc-block-product-search__button {
+	background-color: $primary-green;
+	color: $white;
+	border-color: $primary-green;
+}
