--- a/woocommerce.css
+++ b/woocommerce.css
@@ -459,7 +459,9 @@ p.no-comments {
 .woocommerce-info,
 .woocommerce-noreviews,
 p.no-comments {
-	background-color: #3d9cd2;
+	background-color: #414840;
+	color: white;
+	padding: 1rem;
 }
 
 .woocommerce-error {
